mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/module.stderr
error: use of deprecated function `test::ok`
  --> tests/failing_no_mass_cfg_attr/module.rs:11:10
   |
11 |    test::ok();
   |          ^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/module.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^
